[project]
name = "eft-item-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "pydantic-string-url>=1.0.2",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]

[tool.ruff.lint]
select = [
    "ANN","FAST","ASYNC","B","A",
    "EXE","ISC","T20","Q","RET",
    "SIM","TID","ARG","C90","N",
    "E","W","F","S",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
